Styling and more drop down fixes

--- a/TnTComponents.Testing/TnTComponents.Client/Pages/Home.razor
+++ b/TnTComponents.Testing/TnTComponents.Client/Pages/Home.razor
@@ -43,25 +43,25 @@
         <TnTForm FormType="FormType.Outlined">
             <div class="tnt-row">
                 <div class="tnt-col s12 m6">
-                    <TnTFormDropDown AllowClear="false" ListItems="_items" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder">
+                    <TnTFormDropDown AllowClear="false" ListItems="_items" DisabledProperty="Disabled" TextProperty="Value" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder">
                         <ListItemTemplate>
                             <span>
-                                @context
+                                @context.Value
                             </span>
                             <i class="material-icons">search</i>
                         </ListItemTemplate>
                     </TnTFormDropDown>
 
-                    <TnTFormDropDown ListItems="_items" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
+                    <TnTFormDropDown ListItems="_items" DisabledProperty="Disabled" TextProperty="Value" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
 
-                    <TnTFormDropDown ListItems="_items" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
+                    <TnTFormDropDown ListItems="_items" TextProperty="Value" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
                 </div>
                 <div class="tnt-col s12 m6">
-                    <TnTFormDropDown ListItems="_items" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" />
+                    <TnTFormDropDown ListItems="_items" TextProperty="Value" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" />
 
-                    <TnTFormDropDown ListItems="_items" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" />
+                    <TnTFormDropDown ListItems="_items" TextProperty="Value" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" />
 
-                    <TnTFormDropDown ListItems="_items" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" />
+                    <TnTFormDropDown ListItems="_items" TextProperty="Value" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" />
                 </div>
             </div>
         </TnTForm>
@@ -70,27 +70,27 @@
 
             <div class="tnt-col s12 m6">
                 <TnTForm FormType="FormType.Outlined">
-                    <TnTFormDropDown ListItems="_items" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
+                    <TnTFormDropDown ListItems="_items" TextProperty="Value" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
                 </TnTForm>
                 <TnTForm FormType="FormType.Default">
-                    <TnTFormDropDown ListItems="_items" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
+                    <TnTFormDropDown ListItems="_items" TextProperty="Value" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
                 </TnTForm>
 
                 <TnTForm FormType="FormType.Filled">
-                    <TnTFormDropDown ListItems="_items" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
+                    <TnTFormDropDown ListItems="_items" TextProperty="Value" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
                 </TnTForm>
             </div>
             <div class="tnt-col s12 m6">
                 <TnTForm FormType="FormType.Outlined">
-                    <TnTFormDropDown ListItems="_items" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" />
+                    <TnTFormDropDown ListItems="_items" TextProperty="Value" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" />
                 </TnTForm>
 
                 <TnTForm FormType="FormType.Default">
-                    <TnTFormDropDown ListItems="_items" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" />
+                    <TnTFormDropDown ListItems="_items" TextProperty="Value" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" />
                 </TnTForm>
 
                 <TnTForm FormType="FormType.Filled">
-                    <TnTFormDropDown ListItems="_items" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" />
+                    <TnTFormDropDown ListItems="_items" TextProperty="Value" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" />
                 </TnTForm>
             </div>
         </div>
@@ -99,28 +99,28 @@
             <div class="tnt-col s12 m6">
 
                 <TnTForm FormType="FormType.Outlined">
-                    <TnTFormDropDown ListItems="_items" Disable="true" @bind-Value="_value" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
+                    <TnTFormDropDown ListItems="_items" TextProperty="Value" Disable="true" @bind-Value="_value" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
                 </TnTForm>
 
                 <TnTForm FormType="FormType.Default">
-                    <TnTFormDropDown ListItems="_items" Disable="true" @bind-Value="_value" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
+                    <TnTFormDropDown ListItems="_items" TextProperty="Value" Disable="true" @bind-Value="_value" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
                 </TnTForm>
 
                 <TnTForm FormType="FormType.Filled">
-                    <TnTFormDropDown ListItems="_items" Disable="true" @bind-Value="_value" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
+                    <TnTFormDropDown ListItems="_items" TextProperty="Value" Disable="true" @bind-Value="_value" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
                 </TnTForm>
             </div>
             <div class="tnt-col s12 m6">
                 <TnTForm FormType="FormType.Outlined">
-                    <TnTFormDropDown ListItems="_items" Disable="true" @bind-Value="_value" Label="My Label" HelperText="My Helper Text" />
+                    <TnTFormDropDown ListItems="_items" TextProperty="Value" Disable="true" @bind-Value="_value" Label="My Label" HelperText="My Helper Text" />
                 </TnTForm>
 
                 <TnTForm FormType="FormType.Default">
-                    <TnTFormDropDown ListItems="_items" Disable="true" @bind-Value="_value" Label="My Label" HelperText="My Helper Text" />
+                    <TnTFormDropDown ListItems="_items" TextProperty="Value" Disable="true" @bind-Value="_value" Label="My Label" HelperText="My Helper Text" />
                 </TnTForm>
 
                 <TnTForm FormType="FormType.Filled">
-                    <TnTFormDropDown ListItems="_items" Disable="true" @bind-Value="_value" Label="My Label" HelperText="My Helper Text" />
+                    <TnTFormDropDown ListItems="_items" TextProperty="Value" Disable="true" @bind-Value="_value" Label="My Label" HelperText="My Helper Text" />
                 </TnTForm>
 
             </div>
@@ -164,10 +164,14 @@
     private bool _dark = false;
     private bool _sideBarExpanded = false;
 
-    private string _value;
+    private DisabledItem _value;
 
-    private List<string> _items = default!;
+    private List<DisabledItem> _items = default!;
 
+    private class DisabledItem {
+        public bool Disabled { get; set; }
+        public string Value { get; set; }
+    }
 
     public Dictionary<string, object> C = new Dictionary<string, object>() {
         { "class", "tnt-form" }
@@ -178,9 +182,12 @@
     };
 
     protected override void OnInitialized() {
-        _items = new List<string>();
+        _items = new List<DisabledItem>();
         foreach (var i in Enumerable.Range(1, 100)) {
-            _items.Add($"Item {i}");
+            _items.Add(new DisabledItem() {
+                    Disabled = i % 5 == 0,
+                    Value = $"Item {i}"
+                });
         }
     }
 
