--- a/TnTComponents/Styles/Components/forms/_dropdown.scss
+++ b/TnTComponents/Styles/Components/forms/_dropdown.scss
@@ -13,6 +13,14 @@
 
             &.disabled {
                 color: color.adjust($tnt-color-on-surface-variant, $alpha: -0.5);
+
+                &:hover {
+                    background-color: transparent;
+                }
+            }
+
+            &.placeholder {
+                color: color.adjust($tnt-color-on-surface-variant, $alpha: -0.5);
             }
         }
     }
@@ -60,6 +68,27 @@
             line-height: 2rem;
             transition: 150ms;
             background-color: transparent;
+
+            &.disabled {
+                cursor: default;
+
+                i {
+                    cursor: default;
+                }
+            }
+
+            i {
+                background-color: transparent;
+                user-select: none;
+
+                &:hover {
+                    background-color: transparent;
+                }
+
+                &:active {
+                    background-color: transparent;
+                }
+            }
         }
 
         &.dropup {
@@ -71,6 +100,7 @@
         cursor: pointer;
         border-radius: 100%;
         transition: 150ms;
+        user-select: none;
 
         &:hover {
             background-color: #00000022;
@@ -78,6 +108,26 @@
 
         &:active {
             background-color: #00000044;
+        }
+    }
+
+    &.disabled {
+        cursor: default;
+
+        input {
+            cursor: default;
+        }
+
+        i {
+            cursor: default;
+
+            &:hover {
+                background-color: transparent;
+            }
+
+            &:active {
+                background-color: transparent;
+            }
         }
     }
 }
