--- a/TnTComponents/Styles/Components/forms/_form.scss
+++ b/TnTComponents/Styles/Components/forms/_form.scss
@@ -28,6 +28,7 @@
 }
 
 @import '_checkbox.scss';
+@import '_datetimepicker.scss';
 @import '_dropdown.scss';
 @import '_numeric.scss';
 @import '_switch.scss';
