--- a/TnTComponents.Testing/TnTComponents.Client/Pages/Home.razor
+++ b/TnTComponents.Testing/TnTComponents.Client/Pages/Home.razor
@@ -40,28 +40,40 @@
     </TnTSideBar>
     <TnTBody SideBarExpanded="@_sideBarExpanded">
 
+        <div class="tnt-row">
+            <div class="tnt-col s12 m6">
+                <TnTDatePicker FormType="FormType.Filled" AllowClear="false" DisabledProperty="Disabled" TextProperty="Value" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder">
+                </TnTDatePicker>
+
+                <TnTDatePicker FormType="FormType.Filled" DisabledProperty="Disabled" TextProperty="Value" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
+
+                <TnTDatePicker FormType="FormType.Filled" TextProperty="Value" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
+            </div>
+            <div class="tnt-col s12 m6">
+                <TnTDatePicker FormType="FormType.Filled" TextProperty="Value" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" />
+
+                <TnTDatePicker FormType="FormType.Filled" TextProperty="Value" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" />
+
+                <TnTDatePicker FormType="FormType.Filled" TextProperty="Value" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" />
+            </div>
+        </div>
+
         <TnTForm FormType="FormType.Outlined">
             <div class="tnt-row">
                 <div class="tnt-col s12 m6">
-                    <TnTFormDropDown AllowClear="false" ListItems="_items" DisabledProperty="Disabled" TextProperty="Value" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder">
-                        <ListItemTemplate>
-                            <span>
-                                @context.Value
-                            </span>
-                            <i class="material-icons">search</i>
-                        </ListItemTemplate>
-                    </TnTFormDropDown>
+                    <TnTDatePicker AllowClear="false" DisabledProperty="Disabled" TextProperty="Value" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder">
+                    </TnTDatePicker>
 
-                    <TnTFormDropDown ListItems="_items" DisabledProperty="Disabled" TextProperty="Value" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
+                    <TnTDatePicker DisabledProperty="Disabled" TextProperty="Value" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
 
-                    <TnTFormDropDown ListItems="_items" TextProperty="Value" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
+                    <TnTDatePicker TextProperty="Value" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
                 </div>
                 <div class="tnt-col s12 m6">
-                    <TnTFormDropDown ListItems="_items" TextProperty="Value" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" />
+                    <TnTDatePicker TextProperty="Value" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" />
 
-                    <TnTFormDropDown ListItems="_items" TextProperty="Value" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" />
+                    <TnTDatePicker TextProperty="Value" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" />
 
-                    <TnTFormDropDown ListItems="_items" TextProperty="Value" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" />
+                    <TnTDatePicker TextProperty="Value" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" />
                 </div>
             </div>
         </TnTForm>
@@ -70,27 +82,27 @@
 
             <div class="tnt-col s12 m6">
                 <TnTForm FormType="FormType.Outlined">
-                    <TnTFormDropDown ListItems="_items" TextProperty="Value" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
+                    <TnTDatePicker TextProperty="Value" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
                 </TnTForm>
                 <TnTForm FormType="FormType.Default">
-                    <TnTFormDropDown ListItems="_items" TextProperty="Value" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
+                    <TnTDatePicker TextProperty="Value" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
                 </TnTForm>
 
                 <TnTForm FormType="FormType.Filled">
-                    <TnTFormDropDown ListItems="_items" TextProperty="Value" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
+                    <TnTDatePicker TextProperty="Value" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
                 </TnTForm>
             </div>
             <div class="tnt-col s12 m6">
                 <TnTForm FormType="FormType.Outlined">
-                    <TnTFormDropDown ListItems="_items" TextProperty="Value" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" />
+                    <TnTDatePicker TextProperty="Value" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" />
                 </TnTForm>
 
                 <TnTForm FormType="FormType.Default">
-                    <TnTFormDropDown ListItems="_items" TextProperty="Value" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" />
+                    <TnTDatePicker TextProperty="Value" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" />
                 </TnTForm>
 
                 <TnTForm FormType="FormType.Filled">
-                    <TnTFormDropDown ListItems="_items" TextProperty="Value" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" />
+                    <TnTDatePicker TextProperty="Value" @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" />
                 </TnTForm>
             </div>
         </div>
@@ -99,28 +111,28 @@
             <div class="tnt-col s12 m6">
 
                 <TnTForm FormType="FormType.Outlined">
-                    <TnTFormDropDown ListItems="_items" TextProperty="Value" Disable="true" @bind-Value="_value" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
+                    <TnTDatePicker TextProperty="Value" Disable="true" @bind-Value="_value" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
                 </TnTForm>
 
                 <TnTForm FormType="FormType.Default">
-                    <TnTFormDropDown ListItems="_items" TextProperty="Value" Disable="true" @bind-Value="_value" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
+                    <TnTDatePicker TextProperty="Value" Disable="true" @bind-Value="_value" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
                 </TnTForm>
 
                 <TnTForm FormType="FormType.Filled">
-                    <TnTFormDropDown ListItems="_items" TextProperty="Value" Disable="true" @bind-Value="_value" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
+                    <TnTDatePicker TextProperty="Value" Disable="true" @bind-Value="_value" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
                 </TnTForm>
             </div>
             <div class="tnt-col s12 m6">
                 <TnTForm FormType="FormType.Outlined">
-                    <TnTFormDropDown ListItems="_items" TextProperty="Value" Disable="true" @bind-Value="_value" Label="My Label" HelperText="My Helper Text" />
+                    <TnTDatePicker TextProperty="Value" Disable="true" @bind-Value="_value" Label="My Label" HelperText="My Helper Text" />
                 </TnTForm>
 
                 <TnTForm FormType="FormType.Default">
-                    <TnTFormDropDown ListItems="_items" TextProperty="Value" Disable="true" @bind-Value="_value" Label="My Label" HelperText="My Helper Text" />
+                    <TnTDatePicker TextProperty="Value" Disable="true" @bind-Value="_value" Label="My Label" HelperText="My Helper Text" />
                 </TnTForm>
 
                 <TnTForm FormType="FormType.Filled">
-                    <TnTFormDropDown ListItems="_items" TextProperty="Value" Disable="true" @bind-Value="_value" Label="My Label" HelperText="My Helper Text" />
+                    <TnTDatePicker TextProperty="Value" Disable="true" @bind-Value="_value" Label="My Label" HelperText="My Helper Text" />
                 </TnTForm>
 
             </div>
@@ -164,14 +176,7 @@
     private bool _dark = false;
     private bool _sideBarExpanded = false;
 
-    private DisabledItem _value;
-
-    private List<DisabledItem> _items = default!;
-
-    private class DisabledItem {
-        public bool Disabled { get; set; }
-        public string Value { get; set; }
-    }
+    private DateTime _value;
 
     public Dictionary<string, object> C = new Dictionary<string, object>() {
         { "class", "tnt-form" }
@@ -180,16 +185,6 @@
     public Dictionary<string, object> D = new Dictionary<string, object>() {
         { "class", "tnt-input-field"}
     };
-
-    protected override void OnInitialized() {
-        _items = new List<DisabledItem>();
-        foreach (var i in Enumerable.Range(1, 100)) {
-            _items.Add(new DisabledItem() {
-                    Disabled = i % 5 == 0,
-                    Value = $"Item {i}"
-                });
-        }
-    }
 
     private void SideBarExpanded(bool expanded) {
         _sideBarExpanded = expanded;
